--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,8 +34,10 @@ jobs:
             --label "org.opencontainers.image.source=https://auyer/arch-yay-container" \
             --label "org.opencontainers.image.description=Weekly build of the Arch container with `yay` AUR Helper pre installed" \
             --label "org.opencontainers.image.licenses=MIT" \
-            -t ghcr.io/auyer/arch-yay-container:latest .
-          podman push ghcr.io/auyer/arch-yay-container:latest
+            -t ghcr.io/auyer/arch-yay-container:latest \
+            -t ghcr.io/auyer/arch-yay-container:$(date +'%Y%-m%d') .
+          podman push ghcr.io/auyer/arch-yay-container:latest \
+                      ghcr.io/auyer/arch-yay-container:$(date +'%Y%-m%d')
           echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" > image.txt
 
 
